# streamly

./: .cirrus.yml  .ghci  .gitignore  .hlint.ignore  .hlint.yaml  .packcheck.ignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Changelog.md  Dangerfile  INSTALL.md  LICENSE  MAINTAINING.md  Makefile  README.md  Setup.hs  appveyor.yml  asyncly.cabal  bench.sh  cabal.project  cabal.project.902  cabal.project.O0  cabal.project.Werror  cabal.project.Werror-nocode  cabal.project.ci  cabal.project.coverage  cabal.project.dev  cabal.project.doctest  cabal.project.ghc-head  cabal.project.ghcjs  cabal.project.hpc-coveralls  cabal.project.local  cabal.project.markdown-doctest  cabal.project.packdiff  cabal.project.report  cabal.project.storable  cabal.project.streamly  cabal.upgrade.project  configure  (+23 more)
bench-test-lib/: bench-test-lib.cabal  create_dir_structure.sh
bench-test-lib/src/BenchTestLib/: DirIO.hs
benchmark/: Adaptive.hs  Array.hs  ArrayOps.hs  BaseStreams.hs  BenchmarkNestedLoopOps.hs  BenchmarkNestedLoops.hs  BenchmarkOps.hs  Benchmarks.hs  CI.hs  Chart.hs  ChartLinear.hs  ChartNested.hs  Charts.hs  Common.hs  Concurrent.hs  DList.hs  DListOps.hs  FileIO.hs  Linear.hs  LinearAsync.hs  LinearOps.hs  LinearRate.hs  Main.hs  NanoBenchmarks.hs  Nested.hs  NestedConcurrent.hs  NestedOps.hs  NestedUnfold.hs  NestedUnfoldOps.hs  Parallel.hs  README.md  StreamDKOps.hs  StreamDOps.hs  StreamKOps.hs  Utils.hs  iotest.hs  streamly-benchmarks.cabal
benchmark/Streamly/Benchmark/: CommonH.hs  CrossModule.hs  Prelude.hs
benchmark/bench-report/: BenchReport.hs  BenchReportRunner.hs  bench-report.cabal  cabal.project  default.nix
benchmark/bench-runner/: Main.hs  bench-runner.cabal  cabal.project  default.nix  flake.nix  sources.nix
benchmark/report/: Main.hs  default.nix  report.cabal
benchmark_core/: cabal.project  streamly-core-benchmarks.cabal
benchmark_core/bench-report/: bench-report.cabal  default.nix
core/: LICENSE  configure  configure.ac  streamly-core.cabal  streamly-core.cabal.m4
core/docs/: API-Changelog-0.1.0.txt  Changelog.md  Readme.md
core/docs/ApiChangelogs/: 0.1.0-0.2.0.txt  0.1.0.txt  0.2.0-0.2.2.txt  0.2.2-0.2.3.txt  0.2.2-0.3.0.txt
core/src/: DocTestControlException.hs  DocTestDataArray.hs  DocTestDataFileSystem.hs  DocTestDataFold.hs  DocTestDataMutArray.hs  DocTestDataMutArrayGeneric.hs  DocTestDataParser.hs  DocTestDataParserK.hs  DocTestDataScanl.hs  DocTestDataStream.hs  DocTestDataStreamK.hs  DocTestDataUnfold.hs  DocTestDataUnicode.hs  DocTestFileSystemHandle.hs  DocTestFileSystemPosixPath.hs  DocTestUnicodeParser.hs  DocTestUnicodeStream.hs  assert.hs  config.h.in  deprecation.h
core/src/doctest/: DocTestControlException.hs  DocTestDataMutArrayGeneric.hs  DocTestDataParser.hs  DocTestDataStream.hs  DocTestDataStreamK.hs  DocTestDataUnfold.hs  DocTestFileSystemHandle.hs  DocTestFileSystemPath.hs  DocTestFileSystemWindowsPath.hs  DocTestUnicodeParser.hs  DocTestUnicodeStream.hs  DocTestUnicodeString.hs
docs/: API-changelog.txt  Async.md  Build.md  CONTRIBUTORS.md  Changelog.md  Compiling.md  ConcurrentStreams.hs  Credits.md  Documentation.md  Introduction.md  Overview.md  ReactiveProgramming.hs  Roadmap.link  Setup.hs  Tutorial.hs  building.md  doctests.hs  faq.md  getting-started.md  interoperation.md  optimizing.md  performance.md  resources.md  streamly-docs.cabal  streamly-vs-async.md  streamly-vs-lists.md  transformers.md  unified-abstractions.md
docs/Developer/: Benchmarks.md  Contributing.md  Data.Fold.md  Data.FoldK.md  Data.Pipe.md  Data.Scanl.md  Data.Stream.md  FileSystem.DirIO.md  FileSystem.Path.Design.rst  FileSystem.Path.Requirements.rst  MAINTAINING.md  Tests.md  arrays.md  builders.md  ci-tests.md  concurrency.md  container-api.md  contravariant-monad.md  cps-vs-direct.rst  fold-transformation-naming.md  module-organization.md  optimization-guidelines.md  option-modifiers.md  overview.md  paths.rst  records.md  resources.md  roadmap.md  serialization.md  state-machines.md  stream-fold-duality.md  stream-transformation-data-flow.hs  stream-vs-fold.md  streamly-packages.md  unicode.md  utf8-decoder.md
docs/Explanation/: Overview.md  streaming-pradigms.rst  unified-abstractions.md
docs/HowTo/: faq.md  streamly-vs-lists.md
docs/ProjectRelated/: CONTRIBUTORS.md  Changelog.md
docs/Tutorials/: ConcurrentStreams.hs  Introduction.md  ReactiveProgramming.hs  Tutorial.hs  getting-started.md
docs/User/Explanation/: Overview.md
docs/User/Explanatory/: Concurrency.md  Overview.md  design-goals.md  monad-transformers.md  performance-benchmarks.md  streams.md  unified-abstractions.md
docs/User/HowTo/: Compiling.md  Examples.link  faq.md  optimizing.md  serialize-vs-store.md  streamly-vs-async.md  streamly-vs-conduit.md  streamly-vs-lists.md  streamly-vs-others.md
docs/User/Project/: CONTRIBUTORS.md  Changelog.md  README.md  Roadmap.md  Upgrading-0.8-to-0.9.md  Upgrading.md
docs/User/ProjectRelated/: API-changelog.txt  CONTRIBUTORS.md  Changelog.md  Github.link  README.md  Upgrading.md
docs/User/Tutorials/: ConcurrentStreams.hs  Introduction.md  README.md  ReactiveProgramming.hs  Tutorial.hs  arrays.md  before-you-begin.md  builders.md  concurrent-streaming.md  examples-package.link  exception-handling.md  filesystem-operations.md  folds.md  functionality-overview.md  getting-started.md  haskell-intro.md  haskell-io.md  haskell-lazy-evaluation.md  (+26 more)
docs/diagrams/: module-diagram.hs
dummy-package/: dummy-package.cabal
targets/: Targets.hs  default.nix  streamly-targets.cabal
test/: 1-event.hs  2-gather.hs  2-waitAsync.hs  3-async.hs  3-sample.hs  3-waitEvents.hs  Arrays.hs  Main.hs  MaxRate.hs  Prop.hs  PureStreams.hs  README.md  String.hs  alternative.hs  applicative.hs  gather.hs  inspection.hs  logged.hs  loops.hs  nested-loops.hs  parallel-loops.hs  rate-timestamp.hs  streamly-tests.cabal  version-bounds.hs
test/report/: default.nix  streamly-test-report.cabal
test/test-runner/: Main.hs  cabal.project  default.nix  flake.nix  sources.nix  test-runner.cabal
unpacked-map-int/: KeyInt.hs  unpacked-map-int.cabal
(+1333 files in other folders)
